@@ -1,3 +1,8 @@
+2006-06-14 Gonzalo Paniagua Javier <gonzalo@ximian.com>
+
+	* ImageListStreamer.cs: correctly generate the 1bpp mask for images
+	whose width is not a multiple of 8.
+
 2006-06-13  Jackson Harper  <jackson@ximian.com>
 
 	* MdiClient.cs:  Only maximize the next child if the current one
